--- a/customer/templates/profile.html
+++ b/customer/templates/profile.html
@@ -3,6 +3,7 @@
 {% for client in clients_list %}
 <div class="btn btn-success btn-lg">
     <a href="/customer/company/{{client.id}}/"> {{client.name}} </a>
+    <span>{{ client.actual_address }}</span>
 </div>
 {% endfor %}
 {% endblock %}
