--- a/customer/templates/placement.html
+++ b/customer/templates/placement.html
@@ -2,25 +2,40 @@
 {% load static %}
 
 {% block style %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/company.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/placement.css' %}">
 {% endblock %}
 
 
 {% block content %}
 <div class = 'wrapper'>
-    
-    <div class='info'>
-        <span class="name">Название поверхности: </span>
-        <span class="value">{{placement.surface.name}}</span>
-    </div>
-    <div class='info'>
-        <span>Дата начала размещения: </span>
-        <span>{{placement.start_at|date:"d.m.Y"}}</span>
-    </div>
-    <div class='info'>
-        <span>Акт: </span>
-        <span><a href='{{placement.reconciliation.url}}' download='download'>Акт</a></span>
-    </div>
-    
+    <form method="POST" action="/customer/placement/{{placement.id}}/" enctype="multipart/form-data">
+        {% csrf_token %} 
+        <div class='info'>
+            <span class="name">Название поверхности: </span>
+            <span class="value">
+                <select name="surface" >
+                    {% for surface in surface_list  %}
+                    <option value="{{surface.id}}" {% if surface.id == placement.surface.id %} selected {% endif %}>{{surface.name}}</option>
+                    {% endfor %}
+
+                </select>
+            </span>
+        </div>
+        <div class='info'>
+            <span>Дата начала размещения: </span>
+            <span><input type="date" value="{{placement.start_at|date:"d.m.Y"}}" name="start_at"></span>
+        </div>
+        <div class='info'>
+            {% if placement.reconciliation %}
+            <span>Акт: </span>
+            <span><a href='{{placement.reconciliation.url}}' download='download'>Акт</a>
+            {% else %} 
+            <span>Акт: </span>
+            <span>-
+            {% endif %}
+            <input type="file" name="reconciliation"></span>
+        </div>
+        <input type="submit" value="Сохранить"/>
+    </form>
 </div>
 {% endblock %}
