--- a/customer/templates/placement.html
+++ b/customer/templates/placement.html
@@ -22,12 +22,12 @@
             </span>
         </div>
         <div class='info'>
-            <span>Дата начала размещения: </span>
+            <span class="name">Дата начала размещения: </span>
             <span><input type="date" value="{{placement.start_at|date:"d.m.Y"}}" name="start_at"></span>
         </div>
         <div class='info'>
             {% if placement.reconciliation %}
-            <span>Акт: </span>
+            <span class="name">Акт: </span>
             <span><a href='{{placement.reconciliation.url}}' download='download'>Акт</a>
             {% else %} 
             <span>Акт: </span>
@@ -35,7 +35,7 @@
             {% endif %}
             <input type="file" name="reconciliation"></span>
         </div>
-        <input type="submit" value="Сохранить"/>
+        <input class="btn-save" type="submit" value="Сохранить"/>
     </form>
 </div>
 {% endblock %}
